--- a/src/components/units-appliances-los-angeles.astro
+++ b/src/components/units-appliances-los-angeles.astro
@@ -8,7 +8,7 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="content-machinery-f-d">
       <a
         title="Refrigerator Repair Los Angeles"
-        href="/services/commercial-refrigerator-repair-los-angeles">
+        href="/services/refrigerator-repair">
         <div class="f-content-machinery">
           <img
         
@@ -28,6 +28,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/refrigerator-repair">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -53,10 +58,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/freezer-repair">ESTIMATES</a>
+    </div>
   </div>
-
-
-
 
 
 
@@ -83,13 +89,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/washing-machine-repair">ESTIMATES</a>
+    </div>
   </div>
-
-
-
-
-
-  
 
 
   <div class="content-machinery">
@@ -113,7 +117,12 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/dryer-repair">ESTIMATES</a>
+    </div>
   </div>
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -136,7 +145,13 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/stove-repair">ESTIMATES</a>
+    </div>
   </div>
+
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -161,7 +176,13 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/dishwasher-repair">ESTIMATES</a>
+    </div>
   </div>
+
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -183,7 +204,13 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Oven Repair Los Angeles" href="/book">BOOK US</a>
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/oven-repair">ESTIMATES</a>
+    </div>
   </div>
+
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -206,7 +233,14 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/cooktop-repair">ESTIMATES</a>
+    </div>
   </div>
+
+
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -229,7 +263,13 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/microwave-repair">ESTIMATES</a>
+    </div>
   </div>
+
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -254,7 +294,13 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/range-hood-repair">ESTIMATES</a>
+    </div>
   </div>
+
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
@@ -277,11 +323,18 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/fireplace-repair">ESTIMATES</a>
+    </div>
+
   </div>
+
+
 
   <div class="content-machinery">
     <div class="content-machinery-f-d">
-      <a title="Fireplace Repair Los Angeles" href="/services/fireplace-repair">
+      <a title="Fireplace Repair Los Angeles" href="/services/bbq-grill-repair">
         <div class="f-content-machinery">
           <img
             loading="lazy"
@@ -300,6 +353,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/bbq-grill-repair">ESTIMATES</a>
+    </div>
+
   </div>
 
 
@@ -323,6 +381,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
     <div class="but-content-machinery">
       <a title="Same day Wine Cooler repair Los Angeles" href="/book">BOOK US</a>
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cooler-repair">ESTIMATES</a>
     </div>
   </div>
 
@@ -348,6 +410,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Same day wine cellar repair Los Angeles" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/wine-cellar-repair">ESTIMATES</a>
+    </div>
   </div>
 
 
@@ -372,6 +438,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Same day Induction Cooktop Repair Los Angeles" href="/book">BOOK US</a
       >
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/induction-cooktop-repair">ESTIMATES</a>
     </div>
   </div>
 
