--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -24,7 +24,7 @@ const menuitems = [
       { title: "Range Hood Repair", path: "/services/range-hood-repair" },
       { title: "Fireplace Repair", path: "/services/fireplace-repair" },
       { title: "BBQ Grill Repair", path: "/services/bbq-grill-repair" },
-      { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair" },
+      { title: "Wine Cooler Repair", path: "/services/wine-cooler-repair" },
       { title: "Wine Cellar Repair", path: "/services/wine-cellar-repair" },
       { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair" },
     ],
