--- a/src/components/units-commercial-equipment-los-angeles.astro
+++ b/src/components/units-commercial-equipment-los-angeles.astro
@@ -21,6 +21,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-refrigerator-repair-los-angeles">ESTIMATES</a>
+    </div>
+    
   </div>
 
   <div class="content-machinery">
@@ -41,6 +46,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         >BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-freezer-repair">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -59,6 +69,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Same day washer repair Los Angeles" href="/book">BOOK US</a>
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -77,6 +92,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Same day dryer repair Los Angeles" href="/book">BOOK US</a>
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-dryer-repair">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -95,6 +115,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Same day stove repair Los Angeles" href="/book">BOOK US</a>
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -113,6 +138,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Same day dishwasher repair Los Angeles" href="/book">BOOK US</a>
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="/services/commercial-dishwasher-repair">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -131,6 +161,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Same day oven repair Los Angeles" href="/book">BOOK US</a>
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -151,6 +186,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         >BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -171,6 +211,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         >BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -190,6 +235,11 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Same day ice mashine repair Los Angeles" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
+
   </div>
 
   <div class="content-machinery">
@@ -209,6 +259,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Same day slushie mashine repair Los Angeles" href="/book"
         >BOOK US</a
       >
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
     </div>
   </div>
 
@@ -231,6 +285,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
   </div>
 
 
@@ -252,6 +310,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
         >BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
   </div>
 
   <div class="content-machinery">
@@ -269,6 +331,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
 
     <div class="but-content-machinery">
       <a title="Same day gas dryer repair Los Angeles" href="/book">BOOK US</a>
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
     </div>
   </div>
 
@@ -289,6 +355,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Same day Laundry Speed Queen repair Los Angeles" href="/book"
         >BOOK US</a
       >
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
     </div>
   </div>
 
