--- a/src/components/units-heating-ventilation-air-conditioning.astro
+++ b/src/components/units-heating-ventilation-air-conditioning.astro
@@ -25,6 +25,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
   </div>
 
   <div class="content-machinery">
@@ -47,6 +51,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
     </div>
   </div>
 
@@ -71,6 +79,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
   </div>
 
   <div class="content-machinery">
@@ -93,6 +105,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
     </div>
   </div>
 
@@ -117,6 +133,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
     </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
+    </div>
   </div>
 
   <div class="content-machinery">
@@ -139,6 +159,10 @@ import "@components/css-components/style-units-equipment-los-angeles.css";
     <div class="but-content-machinery">
       <a title="Book Same Day Appliance Repair Services" href="/book">BOOK US</a
       >
+    </div>
+
+    <div class="but-content-machinery but-content-machinery-estimates">
+      <a title="Estimates Same Day Appliance Repair Services" href="#">ESTIMATES</a>
     </div>
   </div>
 </div>
