--- a/src/pages/services/dishwasher-repair.astro
+++ b/src/pages/services/dishwasher-repair.astro
@@ -439,86 +439,174 @@ import "css/service/style_services.css";
           <div class="page213-content" id="left-menu-5">
             <div class="content__page-full-hed">
               <div class="content__page-hed-h">
-                <h2>Microwave Replacement Parts Costs</h2>
+                <h2>Dishwasher Replacement Parts Cost</h2>
               </div>
-              <div class="content__page-hed-desc"></div>
+              <div class="content__page-hed-desc">
+                <p>
+                  Dishwasher repairs involve various parts, each with its own potential cost depending on the model and manufacturer. Here’s a detailed look at typical prices for common dishwasher parts that might need to be replaced:
+                </p>
+              </div>
             </div>
 
             <div class="content__page-full-desc">
               <div class="content__page-desc">
-                <p>
-                  Microwave replacement parts costs can vary depending on the
-                  specific part needed and the make and model of the microwave.
-                  Here are some common replacement parts and their approximate
-                  costs:
-                </p>
-              </div>
+                <div class="full-content_job-prices">
+                  <div class="content_job-prices" id="col-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>
+                          Used to control the flow of water into the dishwasher. If it fails, the dishwasher may not fill correctly or could overfill.
+                        </p></a
+                      >
+                      <p>Water Inlet Valve</p>
+                    </div>
+                    <div class="money_job-prices"><p>$15 - $60</p></div>
+                  </div>
 
-              <table class="costTable">
-                <tr>
-                  <td> Replacement parts </td>
-                  <td> Approximate cost </td>
-                </tr>
+                  <div class="content_job-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>
+                          The pump circulates water during the wash cycle and expels water during draining. If damaged, it can cause issues with water circulation or draining.
+                        </p></a
+                      >
+                      <p>Pump Assembly</p>
+                    </div>
+                    <div class="money_job-prices"><p>$75 - $350 </p></div>
+                  </div>
 
-                <tr>
-                  <td> Magnetron </td>
-                  <td> $50 to $150 </td>
-                </tr>
+                  <div class="content_job-prices" id="col-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>
+                          Heats the water and helps dry the dishes. A malfunctioning heating element can result in dishes not being cleaned properly or not drying.
+                        </p></a
+                      >
+                      <p>Heating Element</p>
+                    </div>
+                    <div class="money_job-prices"><p>$20 - $100</p></div>
+                  </div>
 
-                <tr>
-                  <td> Door Switches (each) </td>
-                  <td> $5 to $20 </td>
-                </tr>
+                  <div class="content_job-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>
+                          Sprayer arms distribute water throughout the dishwasher. If blocked or damaged, it can prevent dishes from being cleaned adequately.
+                        </p></a
+                      >
+                      <p>Spray Arm</p>
+                    </div>
+                    <div class="money_job-prices"><p>$10 - $50</p></div>
+                  </div>
 
-                <tr>
-                  <td> Door Seals </td>
-                  <td> $10 to $30 </td>
-                </tr>
+                  <div class="content_job-prices" id="col-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>
+                          The brain of the dishwasher that controls all functions. If faulty, it can cause the dishwasher to behave erratically or not start at all.
+                        </p></a
+                      >
+                      <p>
+                        Electronic Control Board
+                      </p>
+                    </div>
+                    <div class="money_job-prices"><p>$100 - $300</p></div>
+                  </div>
 
-                <tr>
-                  <td> Control Panel </td>
-                  <td> $50 to $200 </td>
-                </tr>
+                  <div class="content_job-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>
+                          Monitors the water temperature. A faulty thermostat can prevent the heating element from maintaining the correct temperature.
+                        </p></a
+                      >
+                      <p>Thermostat</p>
+                    </div>
+                    <div class="money_job-prices"><p>$10 - $50</p></div>
+                  </div>
 
-                <tr>
-                  <td> Turntable Motor </td>
-                  <td> $20 to $50 </td>
-                </tr>
+                  <div class="content_job-prices" id="col-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"><p>
+                        Secures the dishwasher door during operation. If it fails, the dishwasher might not start as a safety precaution.
+                        </p></a>
+                      <p>
+                        Door Latch
+                      </p>
+                    </div>
+                    <div class="money_job-prices"><p>$5 - $50</p></div>
+                  </div>
 
-                <tr>
-                  <td> High Voltage Diode </td>
-                  <td> $5 to $20 </td>
-                </tr>
+                  <div class="content_job-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>Ensures a watertight seal around the door. If worn or damaged, leaks may occur.
+                        </p></a
+                      >
+                      <p>Door Seal (or Gasket)</p>
+                    </div>
+                    <div class="money_job-prices"><p>$10 - $40</p></div>
+                  </div>
 
-                <tr>
-                  <td> High Voltage Capacitor </td>
-                  <td> $10 to $30 </td>
-                </tr>
+                  <div class="content_job-prices" id="col-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"><p>
+                        Channels wastewater from the dishwasher to the drain. If clogged or damaged, it could cause the dishwasher to leak or not drain properly.
+                        </p></a>
+                      <p>
+                        Drain Hose
+                      </p>
+                    </div>
+                    <div class="money_job-prices"><p>$5 - $20</p></div>
+                  </div>
 
-                <tr>
-                  <td> Transformer </td>
-                  <td> $50 to $100 </td>
-                </tr>
+                  <div class="content_job-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>Releases detergent into the dishwasher at the right time in the cycle. If broken, dishes may not be cleaned properly.
+                        </p></a
+                      >
+                      <p>Detergent Dispenser</p>
+                    </div>
+                    <div class="money_job-prices"><p>$30 - $100</p></div>
+                  </div>
 
-                <tr>
-                  <td> Fuse </td>
-                  <td> $1 to $10 </td>
-                </tr>
+                  <div class="content_job-prices" id="col-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"><p>
+                        Hold dishes during the wash cycle. They can rust or break with age.
+                        </p></a>
+                      <p>
+                        Racks and Tines
+                      </p>
+                    </div>
+                    <div class="money_job-prices"><p>$20 - $200</p></div>
+                  </div>
 
-                <tr>
-                  <td> Waveguide Cover </td>
-                  <td> $5 to $20 </td>
-                </tr>
-              </table>
+                  <div class="content_job-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"
+                        ><p>Prevents the dishwasher from overfilling. A malfunctioning float switch can lead to overfilling or underfilling.
+                        </p></a
+                      >
+                      <p>Float Switch</p>
+                    </div>
+                    <div class="money_job-prices"><p>$10 - $30</p></div>
+                  </div>
 
-              <div class="content__page-desc">
-                <p>
-                  These are approximate costs and can vary depending on factors
-                  such as brand, quality, and availability. Additionally, labor
-                  costs for installation may also apply if you hire a technician
-                  to replace the part. It's essential to consider these factors
-                  when budgeting for microwave repairs.
-                </p>
+                  <div class="content_job-prices" id="col-prices">
+                    <div class="desk_job-prices">
+                      <a href="#"><p>
+                        Allows the user to select cycles and start the dishwasher. If faulty, it may not respond or could activate the wrong commands.
+                        </p></a>
+                      <p>
+                        Touchpad and Control Panel
+                      </p>
+                    </div>
+                    <div class="money_job-prices"><p>$75 - $200</p></div>
+                  </div>
+
+                </div>
               </div>
             </div>
             <Btn />
